[gd_scene load_steps=7 format=3 uid="uid://dt04h06w01gic"]

[ext_resource type="Script" uid="uid://2l76ekloil5x" path="res://GameSystem/TerrainManager/TerrainManager.gd" id="1_uynwf"]
[ext_resource type="Script" uid="uid://cwasldijonxiw" path="res://GameSystem/TerrainManager/TerrainEditor/TerrainEditor.gd" id="2_shx21"]
[ext_resource type="Shader" uid="uid://cvcwgowkk3fmw" path="res://GameSystem/TerrainManager/terrain_shader.tres" id="2_xue7e"]

[sub_resource type="Curve" id="Curve_xue7e"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_xue7e"]
curve = SubResource("Curve_xue7e")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_shx21"]
shader = ExtResource("2_xue7e")
shader_parameter/curve_texture = SubResource("CurveTexture_xue7e")

[node name="TerrainManager" type="Node2D"]
script = ExtResource("1_uynwf")
_map_data = [{
"id": 1,
"polygon": PackedVector2Array(900, 0, 865.762, 0, 867.904, -4.20344, 883.39, -19.6897, 900, -28.1527),
"pos_id": Vector2(8, -1)
}, {
"id": 1,
"polygon": PackedVector2Array(1000, 0, 900, 0, 900, -28.1527, 902.904, -29.6324, 924.535, -33.0585, 946.166, -29.6324, 965.68, -19.6897, 969.992, -15.3784, 980.573, -25.9596, 1000, -35.8583),
"pos_id": Vector2(9, -1)
}, {
"id": 1,
"polygon": PackedVector2Array(1068.43, -35.9023, 1087.94, -25.9596, 1100, -13.9016, 1100, 0, 1000, 0, 1000, -35.8583, 1000.09, -35.9023, 1021.72, -39.3284, 1034.26, -37.3423, 1046.8, -39.3284),
"pos_id": Vector2(10, -1)
}, {
"id": 1,
"polygon": PackedVector2Array(1103.43, -10.4733, 1108.76, 0, 1100, 0, 1100, -13.9016),
"pos_id": Vector2(11, -1)
}, {
"id": 1,
"polygon": PackedVector2Array(1113.37, 9.04044, 1116.8, 30.6716, 1113.37, 52.3028, 1103.43, 71.8166, 1100, 75.2448, 1100, 0, 1108.76, 0),
"pos_id": Vector2(11, 0)
}, {
"id": 1,
"polygon": PackedVector2Array(500, 200, 492.144, 200, 492.547, 197.455, 491.65, 191.793, 495.076, 170.162, 500, 160.498),
"pos_id": Vector2(4, 1)
}, {
"id": 1,
"polygon": PackedVector2Array(600, 100, 563.434, 100, 563.817, 99.2487, 579.303, 83.7625, 598.817, 73.8197, 600, 73.6324),
"pos_id": Vector2(5, 0)
}, {
"id": 1,
"polygon": PackedVector2Array(600, 200, 500, 200, 500, 160.498, 505.019, 150.648, 520.505, 135.162, 540.019, 125.219, 549.952, 123.646, 553.535, 120.062, 553.68, 119.989, 553.874, 118.762, 563.434, 100, 600, 100),
"pos_id": Vector2(5, 1)
}, {
"id": 1,
"polygon": PackedVector2Array(600, 300, 500, 300, 500, 200, 600, 200),
"pos_id": Vector2(5, 2)
}, {
"id": 1,
"polygon": PackedVector2Array(700, 29.1742, 700, 100, 600, 100, 600, 73.6324, 618.715, 70.6681, 626.515, 55.3599, 642.002, 39.8737, 661.515, 29.9309, 683.147, 26.5049),
"pos_id": Vector2(6, 0)
}, {
"id": 1,
"polygon": PackedVector2Array(700, 200, 600, 200, 600, 100, 700, 100),
"pos_id": Vector2(6, 1)
}, {
"id": 1,
"polygon": PackedVector2Array(700, 300, 600, 300, 600, 200, 700, 200),
"pos_id": Vector2(6, 2)
}, {
"id": 1,
"polygon": PackedVector2Array(795.69, 7.98647, 800, 10.1823, 800, 100, 700, 100, 700, 29.1742, 704.778, 29.9309, 716.23, 35.7662, 717.428, 33.4155, 732.914, 17.9292, 752.428, 7.98647, 774.059, 4.56042),
"pos_id": Vector2(7, 0)
}, {
"id": 1,
"polygon": PackedVector2Array(800, 200, 700, 200, 700, 100, 800, 100),
"pos_id": Vector2(7, 1)
}, {
"id": 1,
"polygon": PackedVector2Array(800, 300, 700, 300, 700, 200, 800, 200),
"pos_id": Vector2(7, 2)
}, {
"id": 1,
"polygon": PackedVector2Array(800, 400, 700, 400, 700, 300, 800, 300),
"pos_id": Vector2(7, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(900, 100, 800, 100, 800, 10.1823, 815.204, 17.9292, 830.69, 33.4155, 840.633, 52.9292, 844.059, 74.5604, 841.983, 87.6707, 858.919, 84.9884, 877.796, 87.9782, 867.904, 78.0865, 857.961, 58.5727, 854.535, 36.9415, 857.961, 15.3103, 865.762, 0, 900, 0),
"pos_id": Vector2(8, 0)
}, {
"id": 1,
"polygon": PackedVector2Array(900, 200, 800, 200, 800, 100, 900, 100),
"pos_id": Vector2(8, 1)
}, {
"id": 1,
"polygon": PackedVector2Array(900, 300, 800, 300, 800, 200, 900, 200),
"pos_id": Vector2(8, 2)
}, {
"id": 1,
"polygon": PackedVector2Array(900, 400, 800, 400, 800, 300, 900, 300),
"pos_id": Vector2(8, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(1000, 97.2015, 980.573, 87.3028, 976.261, 82.9915, 969.944, 89.3085, 988.133, 92.1893, 1000, 98.236, 1000, 100, 900, 100, 900, 0, 1000, 0),
"pos_id": Vector2(9, 0)
}, {
"id": 1,
"polygon": PackedVector2Array(1000, 200, 900, 200, 900, 100, 1000, 100),
"pos_id": Vector2(9, 1)
}, {
"id": 1,
"polygon": PackedVector2Array(1000, 300, 900, 300, 900, 200, 1000, 200),
"pos_id": Vector2(9, 2)
}, {
"id": 1,
"polygon": PackedVector2Array(1000, 400, 900, 400, 900, 300, 1000, 300),
"pos_id": Vector2(9, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(1000, 500, 900, 500, 900, 400, 1000, 400),
"pos_id": Vector2(9, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(1000, 600, 900, 600, 900, 500, 1000, 500),
"pos_id": Vector2(9, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(1000, 604.759, 998.158, 616.388, 988.215, 635.902, 972.729, 651.388, 957.337, 659.231, 955.742, 660.825, 936.229, 670.768, 914.597, 674.194, 900, 671.882, 900, 600, 1000, 600),
"pos_id": Vector2(9, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(1003.46, 100, 1000, 100, 1000, 98.236),
"pos_id": Vector2(10, 0)
}, {
"id": 1,
"polygon": PackedVector2Array(1100, 75.2448, 1087.94, 87.3028, 1068.43, 97.2456, 1051.04, 100, 1042.56, 100, 1034.26, 98.6855, 1025.96, 100, 1017.48, 100, 1000.09, 97.2456, 1000, 97.2015, 1000, 0, 1100, 0),
"pos_id": Vector2(10, 0)
}, {
"id": 1,
"polygon": PackedVector2Array(1007.65, 102.132, 1023.13, 117.618, 1033.08, 137.132, 1036.5, 158.763, 1036.43, 159.235, 1036.5, 159.707, 1036.45, 160.031, 1037.24, 164.997, 1043.51, 168.192, 1058.99, 183.678, 1067.31, 200, 1000, 200, 1000, 100, 1003.46, 100),
"pos_id": Vector2(10, 1)
}, {
"id": 1,
"polygon": PackedVector2Array(1025.96, 100, 1021.72, 100.672, 1017.48, 100),
"pos_id": Vector2(10, 1)
}, {
"id": 1,
"polygon": PackedVector2Array(1051.04, 100, 1046.8, 100.672, 1042.56, 100),
"pos_id": Vector2(10, 1)
}, {
"id": 1,
"polygon": PackedVector2Array(1068.94, 203.192, 1071.54, 219.639, 1089.11, 222.421, 1094.44, 225.139, 1100, 222.309, 1100, 300, 1000, 300, 1000, 200, 1067.31, 200),
"pos_id": Vector2(10, 2)
}, {
"id": 1,
"polygon": PackedVector2Array(1100, 400, 1000, 400, 1000, 300, 1100, 300),
"pos_id": Vector2(10, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(1100, 500, 1000, 500, 1000, 400, 1100, 400),
"pos_id": Vector2(10, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(1100, 548.654, 1095.41, 553.242, 1075.9, 563.185, 1054.27, 566.611, 1043.64, 564.928, 1037.29, 577.392, 1021.8, 592.878, 1007.82, 600, 1000, 600, 1000, 500, 1100, 500),
"pos_id": Vector2(10, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(1002.29, 602.821, 1000.26, 603.143, 1000, 604.759, 1000, 600, 1007.82, 600),
"pos_id": Vector2(10, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(1158, 218.646, 1177.51, 228.589, 1193, 244.075, 1200, 257.813, 1200, 300, 1100, 300, 1100, 222.309, 1107.19, 218.646, 1128.82, 215.22, 1132.59, 215.818, 1136.37, 215.22),
"pos_id": Vector2(11, 2)
}, {
"id": 1,
"polygon": PackedVector2Array(1200, 333.389, 1193, 347.127, 1183.69, 356.44, 1184.66, 362.604, 1181.24, 384.236, 1173.21, 400, 1100, 400, 1100, 300, 1200, 300),
"pos_id": Vector2(11, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(1171.3, 403.749, 1155.81, 419.236, 1136.3, 429.178, 1130.82, 430.046, 1136.88, 441.95, 1140.31, 463.581, 1136.88, 485.213, 1129.35, 500, 1100, 500, 1100, 400, 1173.21, 400),
"pos_id": Vector2(11, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(1126.94, 504.726, 1122.24, 509.431, 1120.84, 518.242, 1110.9, 537.756, 1100, 548.654, 1100, 500, 1129.35, 500),
"pos_id": Vector2(11, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(1202.94, 263.589, 1206.37, 285.22, 1204.72, 295.601, 1205.42, 300, 1200, 300, 1200, 257.813),
"pos_id": Vector2(12, 2)
}, {
"id": 1,
"polygon": PackedVector2Array(1206.37, 305.982, 1202.94, 327.613, 1200, 333.389, 1200, 300, 1205.42, 300),
"pos_id": Vector2(12, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(900, 500, 800, 500, 800, 400, 900, 400),
"pos_id": Vector2(8, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(900, 600, 800, 600, 800, 500, 900, 500),
"pos_id": Vector2(8, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(900, 671.882, 892.966, 670.768, 873.453, 660.825, 866.156, 653.529, 860.806, 654.376, 839.175, 650.95, 827.181, 644.839, 822.179, 649.842, 809.078, 656.517, 810.955, 668.366, 807.529, 689.997, 802.432, 700, 800, 700, 800, 600, 900, 600),
"pos_id": Vector2(8, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(800, 500, 700, 500, 700, 400, 800, 400),
"pos_id": Vector2(7, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(800, 600, 700, 600, 700, 500, 800, 500),
"pos_id": Vector2(7, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(800, 700, 700, 700, 700, 600, 800, 600),
"pos_id": Vector2(7, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(520.498, 1101.21, 500, 1104.45, 500, 1100, 522.869, 1100),
"pos_id": Vector2(5, 11)
}, {
"id": 1,
"polygon": PackedVector2Array(523.739, 958.338, 543.252, 968.28, 558.739, 983.767, 567.01, 1000, 500, 1000, 500, 955.245, 502.107, 954.911),
"pos_id": Vector2(5, 9)
}, {
"id": 1,
"polygon": PackedVector2Array(567.01, 1000, 568.681, 1003.28, 572.107, 1024.91, 571.594, 1028.15, 572.107, 1031.39, 568.681, 1053.02, 558.739, 1072.54, 555.498, 1075.78, 555.498, 1075.78, 540.011, 1091.27, 522.869, 1100, 500, 1100, 500, 1000),
"pos_id": Vector2(5, 10)
}, {
"id": 1,
"polygon": PackedVector2Array(700, 400, 600, 400, 600, 300, 700, 300),
"pos_id": Vector2(6, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(700, 500, 600, 500, 600, 400, 700, 400),
"pos_id": Vector2(6, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(700, 600, 600, 600, 600, 500, 700, 500),
"pos_id": Vector2(6, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(0, 900, -12.5711, 900, -11.5477, 897.991, -13.5179, 885.552, -10.0918, 863.921, -0.149048, 844.407, 0, 844.258),
"pos_id": Vector2(-1, 8)
}, {
"id": 1,
"polygon": PackedVector2Array(0, 1000, -18.636, 1000, -21.2013, 983.804, -21.435, 983.345, -24.861, 961.714, -23.0644, 950.371, -24.861, 939.027, -21.435, 917.396, -12.5711, 900, 0, 900),
"pos_id": Vector2(-1, 9)
}, {
"id": 1,
"polygon": PackedVector2Array(0, 1030.56, -8.25128, 1022.3, -18.194, 1002.79, -18.636, 1000, 0, 1000),
"pos_id": Vector2(-1, 10)
}, {
"id": 1,
"polygon": PackedVector2Array(100, 700, 62.2565, 700, 66.2896, 692.085, 81.7758, 676.598, 100, 667.313),
"pos_id": Vector2(0, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(100, 800, 14.3391, 800, 14.0299, 798.048, 17.456, 776.417, 27.3988, 756.903, 42.885, 741.417, 53.3712, 736.074, 52.9208, 733.23, 56.3468, 711.598, 62.2565, 700, 100, 700),
"pos_id": Vector2(0, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(100, 900, 0, 900, 0, 844.258, 15.3372, 828.921, 20.7578, 826.159, 17.456, 819.679, 14.3391, 800, 100, 800),
"pos_id": Vector2(0, 8)
}, {
"id": 1,
"polygon": PackedVector2Array(100, 1000, 0, 1000, 0, 900, 100, 900),
"pos_id": Vector2(0, 9)
}, {
"id": 1,
"polygon": PackedVector2Array(100, 1100, 47.3062, 1100, 42.885, 1097.75, 27.3988, 1082.26, 17.456, 1062.75, 14.0535, 1041.26, 7.23495, 1037.79, 0, 1030.56, 0, 1000, 100, 1000),
"pos_id": Vector2(0, 10)
}, {
"id": 1,
"polygon": PackedVector2Array(100, 1153.37, 98.0487, 1153.06, 78.5349, 1143.12, 63.0487, 1127.63, 53.1059, 1108.12, 52.2161, 1102.5, 47.3062, 1100, 100, 1100),
"pos_id": Vector2(0, 11)
}, {
"id": 1,
"polygon": PackedVector2Array(200, 400, 189.619, 400, 191.065, 397.162, 200, 388.227),
"pos_id": Vector2(1, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(200, 500, 166.291, 500, 164.732, 490.161, 168.158, 468.53, 178.101, 449.016, 179.216, 447.902, 177.696, 438.307, 181.122, 416.676, 189.619, 400, 200, 400),
"pos_id": Vector2(1, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(200, 600, 161.615, 600, 173.885, 587.73, 164.917, 570.129, 161.491, 548.498, 162.903, 539.585, 161.491, 530.673, 164.917, 509.042, 167.057, 504.841, 166.291, 500, 200, 500),
"pos_id": Vector2(1, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(200, 700, 100, 700, 100, 667.313, 101.29, 666.656, 122.921, 663.23, 144.552, 666.656, 154.109, 671.525, 150.333, 664.115, 146.907, 642.484, 150.333, 620.853, 160.276, 601.339, 161.615, 600, 200, 600),
"pos_id": Vector2(1, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(200, 800, 100, 800, 100, 700, 200, 700),
"pos_id": Vector2(1, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(200, 900, 100, 900, 100, 800, 200, 800),
"pos_id": Vector2(1, 8)
}, {
"id": 1,
"polygon": PackedVector2Array(200, 1000, 100, 1000, 100, 900, 200, 900),
"pos_id": Vector2(1, 9)
}, {
"id": 1,
"polygon": PackedVector2Array(200, 1100, 100, 1100, 100, 1000, 200, 1000),
"pos_id": Vector2(1, 10)
}, {
"id": 1,
"polygon": PackedVector2Array(200, 1175.62, 197.951, 1174.57, 189.36, 1175.93, 167.728, 1172.51, 159.06, 1168.09, 150.469, 1169.45, 128.837, 1166.03, 109.324, 1156.08, 107.856, 1154.62, 100, 1153.37, 100, 1100, 200, 1100),
"pos_id": Vector2(1, 11)
}, {
"id": 1,
"polygon": PackedVector2Array(300, 400, 200, 400, 200, 388.227, 206.551, 381.676, 226.065, 371.733, 246.547, 368.489, 249.181, 351.857, 259.124, 332.344, 274.61, 316.857, 294.124, 306.915, 300, 305.984),
"pos_id": Vector2(2, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(300, 500, 200, 500, 200, 400, 300, 400),
"pos_id": Vector2(2, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(300, 600, 200, 600, 200, 500, 300, 500),
"pos_id": Vector2(2, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(300, 700, 200, 700, 200, 600, 300, 600),
"pos_id": Vector2(2, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(300, 800, 200, 800, 200, 700, 300, 700),
"pos_id": Vector2(2, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(300, 900, 200, 900, 200, 800, 300, 800),
"pos_id": Vector2(2, 8)
}, {
"id": 1,
"polygon": PackedVector2Array(300, 1000, 200, 1000, 200, 900, 300, 900),
"pos_id": Vector2(2, 9)
}, {
"id": 1,
"polygon": PackedVector2Array(300, 1100, 200, 1100, 200, 1000, 300, 1000),
"pos_id": Vector2(2, 10)
}, {
"id": 1,
"polygon": PackedVector2Array(300, 1196.04, 284.401, 1193.57, 279.312, 1190.98, 272.003, 1192.14, 250.372, 1188.71, 235.698, 1181.24, 228.25, 1182.42, 206.619, 1178.99, 200, 1175.62, 200, 1100, 300, 1100),
"pos_id": Vector2(2, 11)
}, {
"id": 1,
"polygon": PackedVector2Array(337.386, 306.915, 356.9, 316.857, 357.546, 317.503, 375.147, 308.535, 396.778, 305.109, 400, 305.619, 400, 400, 300, 400, 300, 305.984, 315.755, 303.489),
"pos_id": Vector2(3, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(400, 500, 300, 500, 300, 400, 400, 400),
"pos_id": Vector2(3, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(400, 600, 300, 600, 300, 500, 400, 500),
"pos_id": Vector2(3, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(400, 700, 300, 700, 300, 600, 400, 600),
"pos_id": Vector2(3, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(400, 800, 300, 800, 300, 700, 400, 700),
"pos_id": Vector2(3, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(400, 900, 300, 900, 300, 800, 400, 800),
"pos_id": Vector2(3, 8)
}, {
"id": 1,
"polygon": PackedVector2Array(400, 1000, 300, 1000, 300, 900, 400, 900),
"pos_id": Vector2(3, 9)
}, {
"id": 1,
"polygon": PackedVector2Array(400, 1094.91, 389.193, 1093.2, 390.27, 1100, 300, 1100, 300, 1000, 400, 1000),
"pos_id": Vector2(3, 10)
}, {
"id": 1,
"polygon": PackedVector2Array(392.237, 1112.42, 388.811, 1134.05, 386.715, 1138.16, 385.57, 1145.39, 375.627, 1164.9, 360.141, 1180.39, 340.627, 1190.33, 331.046, 1191.85, 327.663, 1193.57, 306.032, 1197, 300, 1196.04, 300, 1100, 390.27, 1100),
"pos_id": Vector2(3, 11)
}, {
"id": 1,
"polygon": PackedVector2Array(500, 300, 434.344, 300, 434.747, 297.453, 434.974, 297.009, 437.882, 278.643, 447.825, 259.13, 463.311, 243.643, 482.825, 233.701, 498.382, 231.237, 495.076, 224.749, 491.65, 203.118, 492.144, 200, 500, 200),
"pos_id": Vector2(4, 2)
}, {
"id": 1,
"polygon": PackedVector2Array(500, 400, 400, 400, 400, 305.619, 418.409, 308.535, 431.903, 315.411, 434.344, 300, 500, 300),
"pos_id": Vector2(4, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(500, 500, 400, 500, 400, 400, 500, 400),
"pos_id": Vector2(4, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(500, 600, 400, 600, 400, 500, 500, 500),
"pos_id": Vector2(4, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(500, 691.656, 481.041, 694.659, 459.41, 691.233, 455.35, 689.164, 461.511, 695.326, 463.893, 700, 400, 700, 400, 600, 500, 600),
"pos_id": Vector2(4, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(450.634, 900, 460.609, 905.083, 476.095, 920.569, 486.038, 940.083, 486.122, 940.61, 494.058, 956.186, 500, 955.245, 500, 1000, 400, 1000, 400, 900),
"pos_id": Vector2(4, 9)
}, {
"id": 1,
"polygon": PackedVector2Array(500, 1100, 442.455, 1100, 425.312, 1091.27, 424.222, 1090.17, 421.65, 1091.49, 400.019, 1094.91, 400, 1094.91, 400, 1000, 500, 1000),
"pos_id": Vector2(4, 10)
}, {
"id": 1,
"polygon": PackedVector2Array(500, 1104.45, 498.866, 1104.63, 482.662, 1102.07, 466.457, 1104.63, 444.826, 1101.21, 442.455, 1100, 500, 1100),
"pos_id": Vector2(4, 11)
}, {
"id": 1,
"polygon": PackedVector2Array(600, 300, 600, 400, 500, 400, 500, 300),
"pos_id": Vector2(5, 3)
}, {
"id": 1,
"polygon": PackedVector2Array(600, 500, 500, 500, 500, 400, 600, 400),
"pos_id": Vector2(5, 4)
}, {
"id": 1,
"polygon": PackedVector2Array(600, 600, 500, 600, 500, 500, 600, 500),
"pos_id": Vector2(5, 5)
}, {
"id": 1,
"polygon": PackedVector2Array(448.548, 803.543, 434.473, 817.617, 437.424, 823.41, 440.85, 845.041, 437.424, 866.672, 427.482, 886.186, 421.613, 892.054, 441.095, 895.14, 450.634, 900, 400, 900, 400, 800, 450.353, 800),
"pos_id": Vector2(5, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(471.454, 714.839, 474.88, 736.471, 471.454, 758.102, 461.511, 777.615, 459.129, 779.998, 458.49, 784.029, 450.353, 800, 400, 800, 400, 700, 463.893, 700),
"pos_id": Vector2(5, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(586.963, 700, 572.815, 700, 579.889, 698.88),
"pos_id": Vector2(5, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(600, 700, 591.559, 700, 592.88, 691.66, 573.31, 694.76, 551.679, 691.334, 532.165, 681.391, 527.126, 676.351, 522.186, 681.29, 502.673, 691.233, 500, 691.656, 500, 600, 600, 600),
"pos_id": Vector2(5, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(600, 800, 518.15, 800, 513.315, 790.511, 509.889, 768.88, 513.315, 747.248, 523.258, 727.735, 538.744, 712.248, 558.258, 702.306, 572.815, 700, 586.963, 700, 591.446, 700.71, 591.559, 700, 600, 700),
"pos_id": Vector2(5, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(600, 872.068, 586.338, 865.107, 570.852, 849.621, 570.852, 849.621, 570.067, 848.836, 564.158, 837.238, 563.119, 837.074, 560.698, 835.84, 558.258, 835.454, 538.744, 825.511, 523.258, 810.025, 518.15, 800, 600, 800),
"pos_id": Vector2(5, 8)
}, {
"id": 1,
"polygon": PackedVector2Array(700, 700, 600, 700, 600, 600, 700, 600),
"pos_id": Vector2(6, 6)
}, {
"id": 1,
"polygon": PackedVector2Array(700, 800, 600, 800, 600, 700, 700, 700),
"pos_id": Vector2(6, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(700, 899.262, 685.304, 884.565, 679.635, 873.441, 662.532, 876.15, 650.649, 874.268, 649.114, 875.05, 627.483, 878.476, 605.852, 875.05, 600, 872.068, 600, 800, 700, 800),
"pos_id": Vector2(6, 8)
}, {
"id": 1,
"polygon": PackedVector2Array(800, 700, 800, 704.774, 797.586, 709.511, 782.1, 724.997, 762.586, 734.94, 740.955, 738.366, 725.069, 735.85, 716.304, 753.052, 711.757, 757.599, 719.164, 765.005, 724.832, 776.129, 741.935, 773.421, 763.566, 776.847, 783.08, 786.789, 785.372, 789.081, 792.169, 788.005, 792.979, 788.133, 793.789, 788.005, 800, 788.988, 800, 800, 700, 800, 700, 700),
"pos_id": Vector2(7, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(800, 900, 700.738, 900, 700, 899.262, 700, 800, 800, 800),
"pos_id": Vector2(7, 8)
}, {
"id": 1,
"polygon": PackedVector2Array(800, 927.021, 793.789, 928.005, 792.979, 927.876, 792.169, 928.005, 770.538, 924.579, 751.024, 914.636, 748.732, 912.344, 741.935, 913.421, 720.304, 909.995, 700.79, 900.052, 700.738, 900, 800, 900),
"pos_id": Vector2(7, 9)
}, {
"id": 1,
"polygon": PackedVector2Array(815.42, 791.431, 832.239, 800, 800, 800, 800, 788.988),
"pos_id": Vector2(8, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(802.432, 700, 800, 704.774, 800, 700),
"pos_id": Vector2(8, 7)
}, {
"id": 1,
"polygon": PackedVector2Array(834.934, 801.373, 850.42, 816.86, 860.363, 836.373, 863.789, 858.005, 860.363, 879.636, 850.42, 899.15, 849.57, 900, 800, 900, 800, 800, 832.239, 800),
"pos_id": Vector2(8, 8)
}, {
"id": 1,
"polygon": PackedVector2Array(834.934, 914.636, 815.42, 924.579, 800, 927.021, 800, 900, 849.57, 900),
"pos_id": Vector2(8, 9)
}]

[node name="TerrainShader" type="CanvasGroup" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_shx21")

[node name="TerrainEditor" type="Node2D" parent="."]
script = ExtResource("2_shx21")
